--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,51 @@
-.idea/
-.env
-/configs/
-/src/
+# compiled output
+/tmp
+/out-tsc
+
+# dependencies
+/node_modules
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
 .DS_Store
-nginx/configs/conf.d/*.conf
-nginx/ssl/*.cert
-nginx/ssl/*.key
-.htpasswd
+Thumbs.db
+/dist/
+
+# docker repo ignored
+src/
+.env
+/nginx/configs/conf.d/
+/nginx/ssl/
+/nginx/configs/.htpasswd
 /openssl.cnf
-/symfony-rest-api.com.csr
+/*.csr
+/configs/
+/shared/
