--- a/nginx/configs/nginx.conf
+++ b/nginx/configs/nginx.conf
@@ -28,7 +28,19 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
 
-    gzip  on;
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_types text/css text/javascript text/xml text/plain text/x-component application/javascript application/x-javascript application/json application/xml application/rss+xml font/truetype application/x-font-ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
+    gzip_static on;
+
+    brotli        on;
+    brotli_comp_level 7;
+    brotli_types text/css text/javascript text/xml text/plain text/x-component application/javascript application/x-javascript application/json application/xml application/rss+xml font/truetype application/x-font-ttf font/opentype application/vnd.ms-fontobject image/svg+xml;
+    brotli_static on;
 
     include /etc/nginx/conf.d/*.conf;
 }
