--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,13 @@ services:
     build: ./docker-images/nginx
     ports:
      - ${WEB_SRV_PORT}:80
+     - ${WEB_SRV_PORT_SSL}:443
     volumes:
      - ./nginx/configs/conf.d/:/etc/nginx/conf.d/
      - ./nginx/configs/nginx.conf:/etc/nginx/nginx.conf
      - ./nginx/configs/.htpasswd:/etc/nginx/.htpasswd
      - ./nginx/ssl/:/etc/nginx/ssl/
+     - ./src/${PATH_ANGULAR}:/var/www/html/${PATH_ANGULAR}/
      - ./src/${PATH_SYMFONY_APP}:/var/www/html/${PATH_SYMFONY_APP}/
     volumes_from:
      - app
