--- a/nginx/configs/nginx.conf
+++ b/nginx/configs/nginx.conf
@@ -20,6 +20,8 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
+    server_names_hash_bucket_size 64;
+
     sendfile        off;
     client_max_body_size 16m;
     tcp_nopush on;
